Correct z-index on listings index carousel, migrate listings

--- a/sparebnb/frontend/src/components/Listings/ListingsIndex/ListingsIndex.css
+++ b/sparebnb/frontend/src/components/Listings/ListingsIndex/ListingsIndex.css
@@ -9,7 +9,7 @@
 	background-color: white;
 	box-shadow: 0 2px 4px rgba(0,0,0,0.08);
 	padding: 0px 80px;
-	z-index: 100;
+	z-index: 99;
 }
 
 
